clusters/firefly/apps/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:5.1.2
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "400m"
          ports:
            - containerPort: 8080 # Web UI
            - containerPort: 55555 # BitTorrent (TCP/UDP)
          volumeMounts:
            - mountPath: /config
              name: qbittorrent
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: qbittorrent
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
