clusters/firefly/apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/entrypoints: websecure
  labels:
    app: qbittorrent
spec:
  rules:
    - host: qbittorrent.sargeant.co # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-service
                port:
                  number: 8080
  tls:
    - hosts:
        - qbittorrent.sargeant.co # Replace with your domain
      secretName: qbittorrent-tls # Secret for TLS certificate
